--- a/conf/ansible/inventory/group_vars/defaults.yaml
+++ b/conf/ansible/inventory/group_vars/defaults.yaml
@@ -92,10 +92,9 @@ aem:
   artifacts_base: overwrite-me
   enable_custom_image_provisioner: false
   jdk:
-    filename: jdk-8u221-linux-x64.rpm
-    version: 8
-    version_update: 221
+    filename: jdk-11.0.7_linux-x64_bin.rpm
     base_url: overwrite-me
+    version: 11.0.7
 
 library:
   aem_healthcheck_version: 1.3.3
